--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -420,7 +420,7 @@
  # --------------- Mechanists
 	civic_tec_origin_mecha_perfectionists:0 "§E£tec_civic_origin£§!Autoregressive Perfection"
 	civic_tec_origin_mecha_perfectionists_desc:0 "§EMechanist ['concept_tec_origin_civic']§!\n\nThis society developed with a higher sophistication of mechanical designs, creating even better robots to suit the menial or domestic task they were designed for in a more efficient way, allowing ways to further customize each unit with specific blueprints and to self-improve themselves over time."
-	civic_tec_origin_mecha_perfectionists_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£engineering£ Precocious Singularity§!\n- This empire starts with the £engineering£ §YDroid§! technology researched.\n£job_roboticist£ Robotic species can generate §Y$tec_loc_commander$§! leaders.\n\n$tec_loc_c_unlocks_feature$ §H£job_roboticist£ Unitary Improvement§!\n"
+	civic_tec_origin_mecha_perfectionists_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£engineering£ Precocious Singularity§!\n- This empire starts with the £engineering£ §YDroid§! technology researched.\n£job_roboticist£ Robotic species can generate §Y$tec_loc_leader_commander$§! leaders.\n\n$tec_loc_c_unlocks_feature$ §H£job_roboticist£ Unitary Improvement§!\n"
 	civic_tec_origin_mecha_perfectionists_nosort:0 "Autoregressive Perfection"
 
 	civic_tec_origin_mecha_automation:0 "§E£tec_civic_origin£§!Productive Automation"
