--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -876,7 +876,79 @@
 	trait_tec_cyborg_mindless:0 "Personality Nullifier"
 	trait_tec_cyborg_mindless_desc:0 "§LAggressive modifications on neural processors or tissue completely nullifies the subject personality and negates any possible agency, subduing the individual to a total obedience, generally paired with lack of self preservation and complete dedication to the workplace, regardless of basic necessities or maintenance.§!"
 	TRAIT_TEC_CYBORG_MINDLESS_EFFECT:0 "Cannot generate §YLeaders§!\nCannot be employed in §Y$pop_cat_ruler$§! Jobs\nEffects amplified a with a §BCyber-Skeleton§! of any type active."
+ # /
+ # --------------- New T1
+	# Endoskeletal implants (menial resource)
+	trait_tec_cyborg_frame_basic:0 "Artificial Mainframe"
+	trait_tec_cyborg_frame_basic_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_frame_basic_effect:0 "§YTO DO§!"
 
+	trait_tec_cyborg_frame_advanced:0 "Superior Mainframe"
+	trait_tec_cyborg_frame_advanced_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_frame_advanced_effect:0 "§YTO DO§!"
+
+	trait_tec_cyborg_frame_mech:0 "Mech-Exoframe"
+	trait_tec_cyborg_frame_mech_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_frame_mech_effect:0 "§YTO DO§!"
+
+	trait_tec_cyborg_frame_combat:0 "Tactical Warframe"
+	trait_tec_cyborg_frame_combat_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_frame_combat_effect:0 "§YTO DO§!"
+
+	# Cranial Implants
+	trait_tec_cyborg_cranial_unity:0 "Neuromorphic Processor"
+	trait_tec_cyborg_cranial_unity_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_cranial_unity_effect:0 "§YTO DO§!"
+
+	trait_tec_cyborg_cranial_research:0 "Innovation Uplink"
+	trait_tec_cyborg_cranial_research_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_cranial_research_effect:0 "§YTO DO§!"
+
+	trait_tec_cyborg_cranial_memory:0 "Neural Emulator"
+	trait_tec_cyborg_cranial_memory_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_cranial_memory_effect:0 "§YTO DO§!"
+
+	# Internal Implants
+	trait_tec_cyborg_internal_a:0 "Neural Emulator"
+	trait_tec_cyborg_internal_a_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_internal_a_effect:0 "§YTO DO§!"
+
+	trait_tec_cyborg_internal_a:0 "Innovation Uplink"
+	trait_tec_cyborg_internal_a_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_internal_a_effect:0 "§YTO DO§!"
+
+	trait_tec_cyborg_internal_a:0 "Neural Emulator"
+	trait_tec_cyborg_internal_a_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_internal_a_effect:0 "§YTO DO§!"
+
+	# Limb implants
+	trait_tec_cyborg_limb_a:0 "Neural Emulator"
+	trait_tec_cyborg_limb_a_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_limb_a_effect:0 "§YTO DO§!"
+
+	trait_tec_cyborg_limb_a:0 "Innovation Uplink"
+	trait_tec_cyborg_limb_a_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_limb_a_effect:0 "§YTO DO§!"
+
+	trait_tec_cyborg_limb_a:0 "Neural Emulator"
+	trait_tec_cyborg_limb_a_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_limb_a_effect:0 "§YTO DO§!"
+
+	# External implants
+	trait_tec_cyborg_external_a:0 "Neural Emulator"
+	trait_tec_cyborg_external_a_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_external_a_effect:0 "§YTO DO§!"
+
+	trait_tec_cyborg_external_a:0 "Innovation Uplink"
+	trait_tec_cyborg_external_a_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_external_a_effect:0 "§YTO DO§!"
+
+	trait_tec_cyborg_external_a:0 "Neural Emulator"
+	trait_tec_cyborg_external_a_desc:0 "§LTO DO.§!"
+	trait_tec_cyborg_external_a_effect:0 "§YTO DO§!"
+
+	# Other
+ # /
  # --------------- T2
 	trait_tec_superior_cybernetics_main:0 "Superior Cybernetics"
 	trait_tec_superior_cybernetics_main_desc:0 "§LThis species has reached such an scale of cybernetic modifications that they are completely dependant of them, being perfected and advanced cyborgs, improved with the state-of-the-art mechanical implants.§!\n"
