last hour changes

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1296,6 +1296,15 @@
 		civic_tec_corporate_researchers_syngularity:0 "TO DO"
 		civic_tec_corporate_researchers_syngularity_desc:0 "TO DO"
 	 # /
+	 # Note: Stability
+		civic_tec_regular_researchers_stability:0 "Disquisitive Method"
+		civic_tec_regular_researchers_stability_desc:0 "TO DO"
+		civic_tec_regular_researchers_stability_tooltip:0 "Researchers produce 1 stability each, etc"
+
+		civic_tec_corporate_researchers_stability:0 "Disquisitive Stabilization"
+		civic_tec_corporate_researchers_stability_desc:0 "TO DO"
+		civic_tec_corporate_researchers_stability_tooltip:0 "Researchers produce 1 stability each, etc"
+	 # /
 	# /
 
 	# Bureaucratic half swap
