--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -3265,7 +3265,7 @@ l_english:
 		building_tec_geo_flora_1:0 "Plantation Terminals"
 		building_tec_geo_flora_1_plural:0 "$building_tec_geo_flora_1$s"
 		building_tec_geo_flora_1_desc:0 "TO DO"
-		# Flora
+		# Volcanic
 		building_tec_geo_volcanic_1:0 "Volcanic Forge"
 		building_tec_geo_volcanic_1_plural:0 "$building_tec_geo_volcanic_1$s"
 		building_tec_geo_volcanic_1_desc:0 "TO DO"
