--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1304,6 +1304,12 @@
 		civic_tec_corporate_researchers_stability:0 "Disquisitive Stabilization"
 		civic_tec_corporate_researchers_stability_desc:0 "TO DO"
 		civic_tec_corporate_researchers_stability_tooltip:0 "Researchers produce 1 stability each, etc"
+
+		civic_tec_hive_researchers_stability:0 "Disquisitive Adquisition"
+		civic_tec_hive_researchers_stability_desc:0 "TO DO"
+
+		civic_tec_machine_researchers_stability:0 "Disquisitive Processing"
+		civic_tec_machine_researchers_stability_desc:0 "TO DO"
 	 # /
 	# /
 
