--- a/localisation/english/zz_evolved_prescripted_l_english.yml
+++ b/localisation/english/zz_evolved_prescripted_l_english.yml
@@ -12,28 +12,43 @@
 # /
 
 # Regular
-	 # Seeders
-		EMPIRE_DESIGN_tec_seeders:0 "The Seeders"
-		EMPIRE_DESIGN_tec_seeders_desc: "TO DO"
+ # Frostpunk
+	#Planet froze til near uninhabitable, cyborgs with megacities and strong martial law
+	EMPIRE_DESIGN_tec_frostpunk:0 "TO DO"
+	EMPIRE_DESIGN_tec_frostpunk_desc:0 "TO DO"
 
-		PRESCRIPTED_adjective_tec_seeders:0 "Yhur'ah"
-		PRESCRIPTED_ship_prefix_tec_see:0 "ISS"
-		PRESCRIPTED_species_name_tec_seeders:0 "Yhurian"
-		PRESCRIPTED_species_plural_tec_seeders:0 "Yhurians"
-		PRESCRIPTED_species_adjective_tec_seeders:0 "Yhurian"
-		PRESCRIPTED_planet_name_tec_seeders:0 "Yhurr"
-		PRESCRIPTED_system_name_tec_seeders:0 "Y'rian"
-		PRESCRIPTED_ruler_name_tec_seeders:0 "Yhur'ah"
-	 # /
+	PRESCRIPTED_adjective_tec_frostpunk:0 "Yhur'ah"
+	PRESCRIPTED_ship_prefix_tec_frostpunk:0 "ISS"
+	PRESCRIPTED_species_name_tec_frostpunk:0 "Yhurian"
+	PRESCRIPTED_species_plural_tec_frostpunk:0 "Yhurians"
+	PRESCRIPTED_species_adjective_tec_frostpunk:0 "Yhurian"
+	PRESCRIPTED_planet_name_tec_frostpunk:0 "Yhurr"
+	PRESCRIPTED_system_name_tec_frostpunk:0 "Y'rian"
+	PRESCRIPTED_ruler_name_tec_frostpunk:0 "Yhur'ah"
+ # /
+
+ # Seeders
+	EMPIRE_DESIGN_tec_seeders:0 "The Seeders"
+	EMPIRE_DESIGN_tec_seeders_desc: "TO DO"
+
+	PRESCRIPTED_adjective_tec_seeders:0 "Yhur'ah"
+	PRESCRIPTED_ship_prefix_tec_see:0 "ISS"
+	PRESCRIPTED_species_name_tec_seeders:0 "Yhurian"
+	PRESCRIPTED_species_plural_tec_seeders:0 "Yhurians"
+	PRESCRIPTED_species_adjective_tec_seeders:0 "Yhurian"
+	PRESCRIPTED_planet_name_tec_seeders:0 "Yhurr"
+	PRESCRIPTED_system_name_tec_seeders:0 "Y'rian"
+	PRESCRIPTED_ruler_name_tec_seeders:0 "Yhur'ah"
+ # /
 # /
 
 # Gestalt
-	# Regular hives
-	# /
-	# Cybernetic hives
-	# /
-	# Biohives
-	 # Yhur
+ # Regular hives
+ # /
+ # Cybernetic hives
+ # /
+ # Biohives
+	# Yhur
 		EMPIRE_DESIGN_tec_yhur:0 "Yhur'ah Sentience"
 		EMPIRE_DESIGN_tec_yhur_desc:0 "The tides awoke us, the sea became our call, our voice. Trillions of our kind thrive and die with the coming waves, trillion of us sleep awaiting the return of the water.\n\nWe are one, cells of a single body, stars of a clear sky. We are mind, we are swarm."
 
@@ -45,8 +60,8 @@
 		PRESCRIPTED_planet_name_tec_yhur:0 "Yhurr"
 		PRESCRIPTED_system_name_tec_yhur:0 "Y'rian"
 		PRESCRIPTED_ruler_name_tec_yhur:0 "Yhur'ah"
-	 # /
-	 # Oozgh
+	# /
+	# Oozgh
 		EMPIRE_DESIGN_tec_oozgh:0 "Oozgh"
 		EMPIRE_DESIGN_tec_oozgh_desc:0 "Hostile organisms populated the perfect world of Khell'Zakka eons ago, the most cunning and terrible of all them being the now known as Oozgh. Born as a virus, a parasite, a vermin, it controlled other organisms and subverted their will to grow and evolve, taking any possible rival by undermining themselves from inside, and eventually it became the dominant species on the planet. Now, after thousands of years of insidious evolution and literally exterminating any sentient species on the surface of Khell'Zakka, it seeks other species to consume, subdue and assimilate."
 
@@ -58,8 +73,8 @@
 		PRESCRIPTED_planet_name_tec_oozgh:0 "Khell'Zakka"
 		PRESCRIPTED_system_name_tec_oozgh:0 "Khell"
 		PRESCRIPTED_ruler_name_tec_oozgh:0 "Oozgh"
-	 # /
 	# /
+ # /
 # /
 
 
