--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -741,13 +741,13 @@
 		# 5	#			# 6	#
 		#####			#####
 	# /
-	tradition_tec_biogenic:0 "Mutation"
-	tradition_tec_biogenic_desc:0 "We have surpassed the limits natural biology imposed on our bodies, and now every single cell of our very selves is a tool to build our future."
+	tradition_tec_biogenics:0 "Mutation"
+	tradition_tec_biogenics_desc:0 "We have surpassed the limits natural biology imposed on our bodies, and now every single cell of our very selves is a tool to build our future."
 
-	tr_tec_biogenic_adopt:0 "$tradition_tec_biogenic$ Traditions"
+	tr_tec_biogenic_adopt:0 "$tradition_tec_biogenics$ Traditions"
 	tr_tec_biogenic_adopt_tooltip:0 "Allows the construction of §H£building£ Xenotransplantation Chambers§!.\nUnlocks the §H£job_purge£ Xenoextraction§! purge type.\nBiological species can be harvested for $tec_loc_xenocytes$ and $tec_loc_society$ via £building£ Xenotransplantation Chambers or §Y£job_purge£ Xenoextraction§! purge type.\n$tec_loc_xenocytes$ can be used to §YChange§! and §YUpgrade§! Mutagenic traits."
 
-	tr_tec_biogenic_finish:0 "$tradition_tec_biogenic$ Traditions Finished"
+	tr_tec_biogenic_finish:0 "$tradition_tec_biogenics$ Traditions Finished"
 	tr_tec_biogenic_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
 
 	tr_tec_biogenic_1:0 "Directed Mutations"
