--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -68,6 +68,7 @@
 	tec_loc_strategic_resources: "£trigger_tec_rare_resources£ Strategic Resources"
 
 	tec_loc_living_metal:0 "£sr_living_metal£ $sr_living_metal$"
+	tec_loc_nanite:0 "£nanites£ Nanite"
 	tec_loc_nanites:0 "£nanites£ $nanites$"
 	tec_loc_zro:0 "£sr_zro£ $sr_zro$"
 	tec_loc_dark_matter:0 "£sr_dark_matter£ $sr_dark_matter$"
@@ -84,6 +85,8 @@
 	tec_loc_crime: "£crime£ $PLANET_CRIME_TITLE$"
 	tec_loc_crime_gestalt: "£crime£ $MOD_PLANET_CRIME_NO_HAPPINESS_MULT$"
 	tec_loc_happiness: "£happiness£ $MOD_POP_HAPPINESS$"
+
+	tec_loc_devastation:0 "£tec_devastation£ $PLANET_DEVASTATION$"
 
 	tec_loc_stability: "£stability£ $PLANET_STABILITY_TITLE$"
 	tec_loc_trade_value_icon: "£trade_value£"
