--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -2718,7 +2718,7 @@ tech_reverse_advanced_dome: " "
 	tec_psionic_path.305.name:0 "$tec_psionic_path.300.name$"
 	tec_psionic_path.305.desc:0 "The true awakening of our species is coming; while we believed our potential completely unlocked, we have discovered now our own bodies are getting harmonized with our new psychic capacities, and some of our physic and cognitive abilities are expanding, beyond what be believed possible.\n\nWe are crossing the frontiers of reality, the [Root.GetName] is ready for a step forward, we all are."
 	tec_psionic_path.305.a:0 "We will transcend."
-	tec_psionic_path.305.a.tooltip:0 "The ability to §YAscend§! our pops with a §MPsionic§! ritual will be unlocked."
+	tec_psionic_path.305.a.tooltip:0 "The ability to §YAscend§! our pops with a §MPsionic§! ritual will be unlocked.\nWe can now do §MEmpowered visits§! to the §MShroud§!."
 
 # --------------- Ascension mechanic
 # Anticheese
