--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -452,7 +452,7 @@
 		councilor_civic_tec_regular_peacekeepers:0 "Herald of Peace"
 		councilor_civic_tec_regular_peacekeepers_female:0 "$councilor_civic_tec_regular_peacekeepers$"
 		councilor_civic_tec_regular_peacekeepers_desc:0 "The $TITLE$ manages the military defensive policies that ensure the wellness of the weak."
-		councilor_civic_tec_regular_peacekeepers_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_peacekeepers_custom_modifier:0 "NOT USED"
 
 		councilor_civic_tec_regular_consumerism:0 "Empire Publicist"
 		councilor_civic_tec_regular_consumerism_female:0 "$councilor_civic_tec_regular_consumerism$"
