--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -1117,7 +1117,7 @@ l_english:
 	tec_habitats.100_extraction_energy:0 "$district_hab_energy$ - Module"
 	tec_habitats.100_extraction_energy_tooltip:0 "Adds the £district£ $district_hab_energy$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_energy$§!, based on the number of $tec_loc_energy$ Orbitals, and provide §Y£job_technician£ Technician§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_energy$.§!"
 	tec_habitats.100_extraction_energy_remove:0 "§RRemove $district_hab_energy$ - Module§!"
-	tec_habitats.100_extraction_energy_remove_tooltip:0 "Disables the £district£ $district_hab_generator$ district. If less than 3 extraction districts are present on the planet, the $district_tec_hab_extraction$ will be available again."
+	tec_habitats.100_extraction_energy_remove_tooltip:0 "Disables the £district£ $district_hab_energy$ district. If less than 3 extraction districts are present on the planet, the $district_tec_hab_extraction$ will be available again."
 
 	tec_habitats.100_extraction_minerals:0 "$district_hab_mining$ Module"
 	tec_habitats.100_extraction_minerals_tooltip:0 "Adds the £district£ $district_hab_mining$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_minerals$§!, based on the number of £minerals£ Mining Orbitals, and provide §Y£job_miner£ Miner§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_mining$.§!"
