discarded patch merge 2 pre ascension work

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1293,8 +1293,8 @@
 		civic_tec_regular_researchers_singularity:0 "TO DO"
 		civic_tec_regular_researchers_singularity_desc:0 "TO DO"
 
-		civic_tec_corporate_researchers_syngularity:0 "TO DO"
-		civic_tec_corporate_researchers_syngularity_desc:0 "TO DO"
+		civic_tec_corporate_researchers_singularity:0 "TO DO"
+		civic_tec_corporate_researchers_singularity_desc:0 "TO DO"
 	 # /
 	 # Note: Stability
 		civic_tec_regular_researchers_stability:0 "Disquisitive Method"
@@ -1304,6 +1304,14 @@
 		civic_tec_corporate_researchers_stability:0 "Disquisitive Stabilization"
 		civic_tec_corporate_researchers_stability_desc:0 "TO DO"
 		civic_tec_corporate_researchers_stability_tooltip:0 "Researchers produce 1 stability each, etc"
+
+		civic_tec_hive_researchers_stability:0 "Disquisitive Adquisition"
+		civic_tec_hive_researchers_stability_desc:0 "TO DO"
+		civic_tec_hive_researchers_stability_tooltip:0 "Researchers produce 1 stability each, etc"
+
+		civic_tec_machine_researchers_stability:0 "Disquisitive Processing"
+		civic_tec_machine_researchers_stability_desc:0 "TO DO"
+		civic_tec_machine_researchers_stability_tooltip:0 "Researchers produce 1 stability each, etc"
 	 # /
 	# /
 
