--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -150,7 +150,7 @@
 
 	sm_naval_logistics_office_desc_modifier:2 "Anchorages: §G+2.5%§! extra $tec_loc_navalcap_from_jobs$"
 
-	tec_anchorage_navalcap:0 "$tec_loc_navalcap_from_jobs$ in the system: §G+5%§!\n\nIncreased effects when a $sm_naval_logistics_office$ starbase building is present.\n\n§HProvided $tec_loc_navalcap_from_jobs$ affects the system where the Anchorage is built.§!"
+	tec_anchorage_navalcap:0 "Modifiers:\n$tt$$tec_loc_navalcap_from_jobs$ in the system: §G+5%§!\n\nIncreased effects when a $sm_naval_logistics_office$ starbase building is present.\n\n§HProvided $tec_loc_navalcap_from_jobs$ affects the system where the Anchorage is built.§!"
 
 	# Cordyceptic
 		sm_cordyceptic_reanimation_facility:0 "Cordyceptic Reanimation Facility"
