--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -91,18 +91,18 @@
 
 # Psionic
 # ------------------------------------------------------------
-	tradition_tec_vanilla_psionics:0 "Psionic"
+	tradition_tec_vanilla_psionics:0 "Psionics"
 	tradition_tec_vanilla_psionics_desc:0 "We stand on the threshold of awakening the true psionic might of our species. Our minds are ready, and we have heard whispers of a psychic realm beyond our own..."
 
-	tr_psionics_adopt:0 "Psionic Traditions"
+	tr_psionics_adopt:0 "Psionics Traditions"
 	tr_psionics_adopt_tooltip:0 "$tr_psionics_adopt_effect$"
 	tr_psionics_adopt_effect:7 "Allows immediate access and contact with the §MShroud§!."
 
-	tr_tec_vanilla_psionics_psiorigin_adopt:0 "Psionic Traditions"
+	tr_tec_vanilla_psionics_psiorigin_adopt:0 "Psionics Traditions"
 	tr_tec_vanilla_psionics_psiorigin_adopt_tooltip:0 "$tr_tec_vanilla_psionics_psiorigin_adopt_effect$"
 	tr_tec_vanilla_psionics_psiorigin_adopt_effect:7 "Gain §Y$tech_telepathy$§! as £society£ Research option."
 
-	tr_psionics_finish:0 "Psionic Traditions Finished"
+	tr_psionics_finish:0 "Psionics Traditions Finished"
 	tr_psionics_finish_tooltip:4 "The Shroud will start influencing our species capacities at a higher level, making our psionic species gain special traits."
 	tr_psionics_finish_effect:4 ""
 
@@ -151,14 +151,14 @@
 
 # Cybernetics
 # ------------------------------------------------------------
-	tradition_tec_vanilla_cybernetics:0 "Cybernetic"
+	tradition_tec_vanilla_cybernetics:0 "Cybernetics"
 	tradition_tec_vanilla_cybernetics_desc:0 "The limits and constraints imposed on us by our feeble organic bodies are simply unacceptable. To reach our full potential, we must turn to cybernetic implants."
 
-	tr_cybernetics_adopt:0 "Cybernetic Traditions"
+	tr_cybernetics_adopt:0 "Cybernetics Traditions"
 	tr_cybernetics_adopt_tooltip:7 "Allows the §YAssimilation§! of Organic pops into §HCyborgs§!.\nPops undergoing §HCybernetic Assimilation§! provide additional £engineering£ §YEngineering§! and £society£ §YSociety§! research during and after the process."
 	tr_cybernetics_adopt_hive_tooltip:7 "Allows the §YAssimilation§! of Organic pops into §HCyborgs§! of the collective.\nPops undergoing §HCybernetic Assimilation§! provide additional £engineering£ §YEngineering§! and £society£ §YSociety§! research during and after the process."
 
-	tr_cybernetics_finish:0 "Cybernetic Traditions Finished"
+	tr_cybernetics_finish:0 "Cybernetics Traditions Finished"
 	tr_cybernetics_finish_tooltip:4 "Organic Species Trait Picks: §G+1§!\nSynthetic Species Trait Picks: §G+1§!\nAscension Perks Unlocked: §G+1§!"
 
 	tr_cybernetics_transubstantiation_synthesis:0 "Transubstantiation Synthesis"
@@ -185,13 +185,13 @@
 
 # Synthetic
 # ------------------------------------------------------------
-	tradition_tec_vanilla_synthetics:0 "Synthetic"
+	tradition_tec_vanilla_synthetics:0 "Synthetics"
 	tradition_tec_vanilla_synthetics_desc:0 "Future is crafted from bolt to bolt, from circuit to circuit, and from data to data, all by our hand and innovation."
 
-	tr_synthetics_adopt:0 "Synthetic Traditions"
+	tr_synthetics_adopt:0 "Synthetics Traditions"
 	tr_synthetics_adopt_tooltip:7 "Allows the assimilation of any Organic or Mechanical species into new Synthetic platforms.\nPops undergoing §HAssimilation§! provide additional §Y$tec_loc_unity$§! during and after the process."
 
-	tr_synthetics_finish:0 "Synthetic Traditions Finished"
+	tr_synthetics_finish:0 "Synthetics Traditions Finished"
 	tr_synthetics_finish_tooltip:4 "£building£ Capitals provide §G+2§! extra £job_roboticist£ Passive Assembly."
 
 	tr_synthetics_finish_machine:0 "$tr_synthetics_finish$"
