--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -239,6 +239,9 @@
 	tec_trait_upkeep_scale_with_skill: "§YTrait upkeep scale with §HLeader Skill§!§!"
 	tec_trait_upkeep_scale_with_negatives: "§YTrait upkeep scale with §RNegative Traits§! suppressed till now§!"
 
+ #Situations	# TODO CODE REWORK - ICON
+	tec_loc_situation:0 "Situation"
+
  # Espionage
 	tec_loc_espionage_interdiction_icon:0 "£trigger_tec_espionage_interdiction£"
 	tec_loc_espionage_interdiction:0 "$tec_loc_espionage_interdiction_icon$ Operation Interdiction"
